<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sheron.csci4100u.ass.a2.AddProductActivity">


    <!-- Product name -->
    <!-- ################################################################## -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/etName"
            android:layout_marginEnd="20dp"
            android:labelFor="@id/etName"
            android:gravity="center_vertical"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:inputType="text"/>
    </RelativeLayout>


    <!-- Product description -->
    <!-- ################################################################## -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/etDescription"
            android:layout_marginEnd="20dp"
            android:labelFor="@id/etDescription"
            android:gravity="center_vertical"
            android:text="@string/description" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:inputType="textLongMessage"/>
    </RelativeLayout>


    <!-- Product price in CAD -->
    <!-- ################################################################## -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvPriceCAD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/etPriceCAD"
            android:layout_marginEnd="20dp"
            android:labelFor="@id/etPriceCAD"
            android:gravity="center_vertical"
            android:text="@string/price_cad" />

        <EditText
            android:id="@+id/etPriceCAD"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:inputType="numberDecimal"/>
    </RelativeLayout>


    <!-- Previous, Next, and Delete Buttons -->
    <!-- ################################################################## -->
    <LinearLayout
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
